@@ -271,4 +271,10 @@ A deep dive into the metaheuristics implementation revealed several issues that 
 ### Simulated Annealing (SA)
 - **Acceptance Probability:** The `calculateDeltaValue` formula `Math.exp(-(valB - valA) / T)` might be incorrectly signs-flipped depending on whether it's a minimization or maximization problem.
 - **Time Variable:** The `time` variable used in the `stopCondition` is never updated inside the loop, potentially leading to infinite loops if a time-based stop condition is used.
-- **Scope Issue:** `methodSA` updates a local `bestSolution` but it's not clearly returning it to the caller in a thread-safe or consistent way if `runMetaHeuristic` is expected to return the final best.
+- **Scope Issue:** `methodSA` updates a local `bestSolution` but it's not clearly returning it to the caller in a thread-safe or consistent way if `runMetaHeuristic` is expected to return the final best. (FIXED)
+
+### System-level Issues (Discovered during DE Fix Verification)
+- **Actor Communication NPE:** `AgentActor.onUpdateGlobalSummary` can crash if `update.summary` is null, which happens if a region registers before its statistics are fully initialized.
+- **Simulation Shutdown Race:** `SimulationActor.stopAgentsAndRegions` fails with a `ClassCastException` because it expects `RegionRelease` but sometimes receives `SimulationStopped` from `RegionActor`.
+- **Data Extraction Mismatch:** `AgentSolutionsOverTimeExtractor` fails because the CQL query in `AgentStateDAO` uses `:agentId` while the parameter and field are named `persistentId`.
+- **Java 21 Compatibility:** Akka Distributed Data (LMDB) and reflection require specific `--add-opens` and `--add-exports` JVM flags to work on Java 17+.
